# cptv-rs

./: .gitignore  20190922-021916.cptv  Cargo.toml  README.MD  build-decoder.sh  build-encoder.sh  build.sh  decoder.js  decoder.worker.js  encoder.d.ts  encoder.js  frameRenderUtils.d.ts  frameRenderUtils.js  index.d.ts  index.html  index.js  package-lock.json  package.json
codec_test/: deploy.sh
codec_test/.cargo/: config
codec_test/src/: main.rs
cptv_common/: Cargo.toml
cptv_common/src/: lib.rs
cptv_player/: Cargo.toml  README.MD  build.bat  index.html  index.js  package.json
cptv_player/src/: decoder.rs  lib.rs  v2.rs  v3.rs
decoder/: Cargo.toml
decoder/pkg/: decoder-node.cjs  decoder-node.d.ts  decoder-node_bg.wasm  decoder-node_bg.wasm.d.ts  decoder.js  decoder_bg.js  decoder_bg.wasm
decoder/src/: decoder.rs  lib.rs
encoder/: Cargo.toml
encoder/pkg/: encoder-node.cjs  encoder-node.d.ts  encoder-node_bg.wasm  encoder.d.ts  encoder.js  encoder_bg.js  encoder_bg.wasm  encoder_bg.wasm.d.ts
encoder/src/: lib.rs
encoder_py_bindings/: Cargo.toml
encoder_py_bindings/src/: lib.rs
encoder_py_bindings/test_py/: test.py  writer.py
examples/: generate-test-cptv-file.js  get-file-metadata.js  read-all-frames.js
module/: index.d.ts  index.js  package.json
pkg/: README.md  index.d.ts  index.js  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
pkg-node/: index.js  index_bg.wasm  package.json
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/v2/: mod.rs  types.rs
shared/src/v3/: types.rs
src/: decoder.rs  lib.rs  main.rs
src/v2/: mod.rs  types.rs
transcoder/: Cargo.toml
transcoder/src/: main.rs
