[package]
name = "cptv_player"
version = "0.1.0"
authors = ["jon hardie <jon@hardiesoft.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This generates javascript functions of wasm functions, so we can
# call into wasm code from JS.

serde-wasm-bindgen = "0.1.3"
wasm-bindgen = { version = "0.2.54", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.21"

#wasm-tracing-allocator = "0.1.1"

# This is the allocator that wasm requires to work with rust.
#wee_alloc = "0.4.5"

# Routing messages to the JS error console
console_log = "0.1.2"
log = "0.4.14"
console_error_panic_hook = "0.1.6"

# Teach rust about JS types (Float32Array)
js-sys = "0.3.27"

ruzstd = { version = "0.2.2", optional = true }
nom = "5.0.1"
byteorder = "1.3.2"
libflate = { version = "1.0.3", optional = true }


[dependencies.cptv_common]
path = "../cptv_common"

[features]
default = ["cptv2-support"]

cptv2-support = ["libflate"]
cptv3-support = ["ruzstd"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
