[package]
name = "cptv-encoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cptv-shared = { path = "../shared" }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
wasm-bindgen = { version = "0.2.54", features = ["serde-serialize"] }

# Routing messages to the JS error console
console_log = "0.1.2"
log = "0.4.14"
console_error_panic_hook = "0.1.6"

# Teach rust about JS types (Uint16Array etc)
js-sys = "0.3.27"

nom = "5.0.1"
byteorder = "1.3.2"
flate2 = { version = "1.0.22" } # Faster on rPi3
chrono = "0.4.19"
